--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+/src/main/proto/
+
+# Netbeans
+.nb-gradle/
+.nb-gradle-properties
