--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ compileJava {
 	targetCompatibility = 11
 }
 
+sourceSets.main.java.srcDirs += 'build/generated/source/proto/main/java'
+
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 mainClassName = 'trace.filtering.Main'
